--- a/letsmow/mower.html
+++ b/letsmow/mower.html
@@ -45,7 +45,7 @@
 
     <h2>Mower Trends</h2>
 
-    <div id="about">
+    <!--<div id="about">-->
         <div class="col span_1_of_3">
             <h3>
                 The Mean Mower
@@ -91,7 +91,7 @@
             <p> The drag mowers are causing all the commotion on the detroit speedways! The fans love it</p>
             <!--</div>-->
         </div>
-    </div>
+    <!--</div>-->
 
 </section>
 <footer>
